package com.example.iwardrobefx;

public class Admin {
}
