package com.example.iwardrobefx;

public class Organizer {
    boolean accesory;
    TicketHandler TH = new TicketHandler();

  /*  public void organizeWardrobes() {
        if (accesory) {
            for (int i = TH.getValuables().size() - 1; i >= 0; i--) {
                TH.getValuables().add(0, TH.getValuables().get(i));
            }

        }
    }*/
}